scalafx as optional dependency